# rswa

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: cron.yml  rust.yml
rswa-auth/: Cargo.toml
rswa-cli/: Cargo.toml
rswa-cli/src/: generate.rs  lib.rs  serve.rs
rswa-cli/src/generate/: jwk.rs
rswa-web/: Cargo.toml
rswa-web/src/: lib.rs
src/: lib.rs  main.rs
